@@ -24,7 +24,9 @@ class RelatedViewlet(ViewletBase):
     @property
     @memoize
     def related_items(self):
-        props = getToolByName(self.context, 'portal_properties').pcommerce_properties
+        portal_properties = getToolByName(self.context, 'portal_properties')
+        use_view_action = portal_properties.site_properties.getProperty('typesUseViewActionInListings', ())
+        props = portal_properties.pcommerce_properties
         columns = int(props.getProperty('columns', 3))
         width = int(props.getProperty('thumb_width', 0))
         width = width and 'image/thumb?width=%s' % width or 'image_thumb'
@@ -39,6 +41,9 @@ class RelatedViewlet(ViewletBase):
                 if item.getImage():
                     image = {'caption': item.getImageCaption(),
                              'thumb': '%s/%s' % (item.absolute_url(), width)}
+                url = item.getURL()
+                if item.portal_type in use_view_action:
+                    url += '/view'
                 items.append({'uid': item.UID(),
                               'class': 'col%s' % col,
                               'title': item.Title(),
@@ -47,5 +52,5 @@ class RelatedViewlet(ViewletBase):
                               'base_price': CurrencyAware(adapter.getBasePrice()),
                               'offer': adapter.getPrice() < adapter.getBasePrice(),
                               'image': image,
-                              'url': item.absolute_url()})
+                              'url': url})
         return items
